# rsomics-bed-complement

./: Cargo.toml
benches/: bed_complement.rs  bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: absent_chrom.bed  complement.out  genome.txt  input.bed  start_gt_end.bed  unsorted.bed  zerolen.bed  zerolen.out
